fix contrast color

--- a/client/src/pages/Register/Register.css
+++ b/client/src/pages/Register/Register.css
@@ -2,7 +2,8 @@
 
 .register {
   margin: 0 auto;
-  width: 18rem;
+  width: clamp(17rem, 85vw, 20rem);
+  height: 95vh;
 }
 
 .register > img {
@@ -27,7 +28,6 @@
 
 .register form > button:nth-of-type(1),
 .register form > button:nth-of-type(2) {
-  margin-left: .5rem;
   padding: 0;
 
   display: grid;
@@ -35,7 +35,7 @@
   align-items: center;
 
   & img {
-    height: 1.5rem;
+    height: 1rem;
     margin: 0;
   }
 }
@@ -49,19 +49,19 @@
 }
 
 .valid {
-  color: #008000;
+  color: #00e600;
 }
 
 .invalid {
-  color: #f00020;
+  color: #ffadb8;
 }
 
 .register form {
   display: grid;
-  grid-template-rows: repeat(10, 1fr);
   grid-template-columns: 80% 20%;
+  gap: .5rem;
 
-  height: 3rem;
+  margin-bottom: 1rem;
 }
 
 .register form > label:nth-of-type(1) {
